Task #96:  #96: Handbook's text is unreadably small. Fix.

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ html {
 
 body {
     background: #FFF;
-    font-size: 14px;
+    font-size: 18px;
     line-height: 1.5;
     min-width: 310px;
 }
